# latino-MySQL

./: .gitignore  CMakeLists.txt  README.md  instalar.sh  sakila.sql
ejemplos/: demo.lat
paquetes/MacOS/: Latino-MySQL-1.0.0-Darwin.pkgproj
paquetes/MacOS/Extras/: uninstall.sh
paquetes/MacOS/Extras/en/: Read Before You Install Packages.rtf
paquetes/MacOS/Extras/es/: Leeme Antes de Instalar.rtf
paquetes/MacOS/src/: leeme.rtf  readme.rtf
src/: latino-mysql.c
